--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     implementation "org.jetbrains.anko:anko:$anko_version"
 
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+
     /* Test Dependencies */
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
