--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation "org.jetbrains.anko:anko:$anko_version"
-
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    implementation 'org.apache.commons:commons-lang3:3.9'
 
     /* Test Dependencies */
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
