--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    // https://github.com/Karumi/Dexter
+    implementation 'com.karumi:dexter:5.0.0' // for easy permissions
 
     /* Test Dependencies */
     testImplementation 'junit:junit:4.12'
