--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,13 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     // https://github.com/Karumi/Dexter
     implementation 'com.karumi:dexter:5.0.0' // for easy permissions
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     /* Test Dependencies */
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
