--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'io.objectbox'
+apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 28
@@ -44,6 +45,11 @@ dependencies {
     implementation 'com.karumi:dexter:5.0.0' // for easy permissions
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    // ObjectBox kotlin extension functions
+    implementation "io.objectbox:objectbox-kotlin:$objectboxVersion"
+    // ObjectBox Debug Browser
+    debugImplementation "io.objectbox:objectbox-android-objectbrowser:$objectboxVersion"
+    releaseImplementation "io.objectbox:objectbox-android:$objectboxVersion"
 
     /* Test Dependencies */
     testImplementation 'junit:junit:4.12'
@@ -52,3 +58,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
+// apply after dependencies to use ObjectBox Debug browser
+apply plugin: 'io.objectbox'
